miniconf/tests/ui/inherited-meta.stderr
error: 'foo' is not supported as inherited meta
 --> tests/ui/inherited-meta.rs:4:13
  |
4 | #[tree(meta(foo))]
  |             ^^^
